added version locking and transactional for entity and service implementation

--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
-                        <groupId>org.projectlombok</groupId>
-                        <artifactId>lombok</artifactId>
+<!--                        <groupId>org.projectlombok</groupId>-->
+<!--                        <artifactId>lombok</artifactId>-->
                     </excludes>
                 </configuration>
             </plugin>
